[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "vulntrack-api"
version = "0.1.0"
description = "Educational vulnerability finding tracking API"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115,<1",
    "uvicorn>=0.30,<1",
]

[project.optional-dependencies]
dev = [
    "bandit>=1.8,<2",
    "build>=1.2,<2",
    "httpx>=0.27,<1",
    "pip-audit>=2.7,<3",
    "pytest>=8.3,<10",
    "pytest-cov>=6,<8",
    "ruff>=0.12,<1",
]

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = ["B", "E", "F", "I", "SIM", "UP"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"

[tool.coverage.run]
branch = true
source = ["vulntrack"]

[tool.coverage.report]
fail_under = 80
show_missing = true
skip_covered = true
