[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "vulntrack-api"
version = "0.1.0"
description = "Educational vulnerability finding tracking API"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn",
]

[project.optional-dependencies]
dev = [
    "bandit>=1.8,<2",
    "detect-secrets>=1.5,<2",
    "pytest",
    "httpx",
    "pip-audit>=2.7,<3",
    "ruff",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
